--- a/p/2015/08/nodejs-talk/ppt_/ppt.css
+++ b/p/2015/08/nodejs-talk/ppt_/ppt.css
@@ -7,11 +7,15 @@
   改自 gitter.im scroller效果
   https://cdn02.gitter.im/_s/543e5ec/styles/router-app.css
 */
-::-webkit-scrollbar{width:9px}
+/* ::-webkit-scrollbar{width:9px}
 ::-webkit-scrollbar-track{background-color:rgba(100,100,100,.1)}
 ::-webkit-scrollbar-thumb{-webkit-border-radius:6px;border-radius:6px;background:rgba(100,100,100,.2);margin-right:1px;-webkit-transition:opacity 300ms ease-in-out;transition:opacity 300ms ease-in-out}
 :hover::-webkit-scrollbar-thumb{background:rgba(100,100,100,.4);margin-right:1px;-webkit-transition:opacity 300ms ease-in-out;transition:opacity 300ms ease-in-out}
 ::-webkit-scrollbar-thumb:window-inactive{background:rgba(0,0,0,.1)}
+ */
+
+/* 隐藏局部滚动条 样式兼容问题 */
+pre code::-webkit-scrollbar, table::-webkit-scrollbar{display:none;}
 
 /* touch箭头提示 */
 @-webkit-keyframes ani_arrow {
@@ -125,18 +129,19 @@ html, body {
   overflow: hidden;
   position: relative;
   background-color: #f8f8f8;
-}
-.dark {
   color: #fff;
+}
+.light {
+  color: #000;
 }
 img {
   max-width: 100%;
 }
 a {
-  color: rgb(100,160,255);
-}
-.dark a {
   color: rgb(160,230,255);
+}
+.light a {
+  color: rgb(30,80,170);
 }
 * {
   -ms-box-sizing: border-box;
@@ -146,26 +151,33 @@ a {
   box-sizing: border-box;
 }
 
-pre, table {
-  display: block;
-  overflow: auto;
-  width: 100%;
-}
 pre {
   word-break: break-all;
 }
-pre code {
+code {
+  background: #232323;
+  color: #e6e1dc;
   -webkit-border-radius: 6px; /* 同scroller圆角 */
   border-radius: 6px;
+  padding: 4px 6px;
+  margin: 0 2px;
+}
+pre code, pre code.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: .5em;
+  margin: 0;
 }
 
 body>main {
+  display: block;
   position: relative;
   width: 100%;
   height: 100%;
 }
 
 section {
+  display: block;
   position: absolute;
   top: 0;
   bottom: 0;
